--- a/api/paths/v1/study/post.yaml
+++ b/api/paths/v1/study/post.yaml
@@ -10,13 +10,13 @@ put:
       description: Bearer 인증 토큰 (access-token)
       required: true
     - in: path
-      name: studyId
+      name: study-id
       schema:
         type: number
         description: 스터디 식별자
         required: true
     - in: path
-      name: postId
+      name: post-id
       schema:
         type: number
         description: 스터디 글 식별자
@@ -63,13 +63,13 @@ delete:
       description: Bearer 인증 토큰 (access-token)
       required: true
     - in: path
-      name: studyId
+      name: study-id
       schema:
         type: number
         description: 스터디 식별자
         required: true
     - in: path
-      name: postId
+      name: post-id
       schema:
         type: number
         description: 스터디 글 식별자
