--- a/api/paths/v1/post/unlike.yaml
+++ b/api/paths/v1/post/unlike.yaml
@@ -15,7 +15,7 @@ post:
         type: number
       description: 스터디 글 식별자
       required: true
-  response:
+  responses:
     '200':
       description: 성공
     '409':
