--- a/api/paths/v1/study/study.yaml
+++ b/api/paths/v1/study/study.yaml
@@ -11,6 +11,7 @@ get:
       required: true
   responses:
     '200':
+      description: 성공
       content:
         application/json:
           schema:
